--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -14,23 +14,34 @@
 
             <h1>Bibliothèque</h1>
 
+            <!-- We have to check if users are connected before displaying some links -->
             <nav class="navbar navbar-default">
                <ul class="nav navbar-nav">
                     <li class="{% if home_active is defined %}active{% endif%}">
                         <a href="{{ path('home') }}">Accueil</a>
                     </li>
+
                     <li class="{% if books_active is defined %}active{% endif%}">
                         <a href="{{ path('books') }}">Les livres</a>
                     </li>
+
+                   {% if app.session.get('admin') == false %}
                     <li class="{% if admin_active is defined %}active{% endif%}">
                         <a href="{{ path('admin') }}">Administration</a>
                     </li>
+                   {% endif %}
+
+                   {% if app.session.get('admin') %}
                     <li class="{% if add_book_active is defined %}active{% endif%}">
                         <a href="{{ path('addBook') }}">Ajouter un livre</a>
                     </li>
+                   {% endif %}
+
+                   {% if app.session.get('admin') %}
                     <li>
                         <a href="{{ path('logout') }}">Déconnexion</a>
                     </li>
+                   {% endif %}
                </ul>
             </nav>
 
