--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,18 @@ h1 {
     font-weight:bold;
     line-height:1.0;
 }
+
+.bookTitle{
+    font-size:150%;
+    font-weight:bold;
+    line-height:1.0;
+}
+
+.prefix{
+    font-size:120%;
+    font-weight:bold;
+}
+
+#bookTitle{
+    padding-bottom: 10px;
+}
