--- a/views/bookDetails.html.twig
+++ b/views/bookDetails.html.twig
@@ -22,12 +22,20 @@
                     <thead>
                     <tr>
                         <th>Identifiant</th>
+                        {% if app.session.get('admin') %}
+                            <th>Emprunter ?</th>
+                        {% endif %}
                     </tr>
                     </thead>
                     <tbody>
-                        {% for emprunt in bookCopies %}
+                        {% for copy in bookCopies %}
                             <tr>
-                                <td>{{ emprunt.id }}</td>
+                                <td>{{ copy.id }}</td>
+                                {% if app.session.get('admin') %}
+                                    <td>
+                                        <a href="{{ path('newEmprunt',{'copyId': copy.id }) }}" class="btn btn-info btn-sm" role="button">Emprunter</a>
+                                    </td>
+                                {% endif %}
                             </tr>
                         {% endfor %}
                     </tbody>
